== 0.1.7 (Not yet released as gem)

Bla bla

* Bugfixes
** Fixed a bug in the command line args being lost when using --profile (#27, Joseph Wilk)
** Fixed a bug in Webrat selects (Tim Glen)

* New features
** Steps can be called from other steps (#3, Bryan Helmkamp, Aslak Hellesøy)
** Added But keyword to all languages (#21, Aslak Hellesøy)
** Added --source option to display step definition location next to step text (#26, Joseph Wilk)
** Added more Webrat steps (#25, Tim Glen)

== 0.1.6

First gem release!