@@ -4,8 +4,10 @@ module Cucumber
       class SyntaxError < StandardError
         def initialize(file, parser)
           tf = parser.terminal_failures
-          expected = tf.size == 1 ? tf[0].expected_string : "one of #{tf.map{|f| f.expected_string}.uniq*', '}"
-          @message = "#{file}:#{parser.failure_line}: Parse error, expected #{expected}"
+          expected = tf.size == 1 ? tf[0].expected_string.inspect : "one of #{tf.map{|f| f.expected_string.inspect}.uniq*', '}"
+          after = parser.input[parser.index...parser.failure_index]
+          found = parser.input[parser.failure_index..parser.failure_index]
+          @message = "#{file}:#{parser.failure_line}:#{parser.failure_column}: Parse error, expected #{expected}. After #{after.inspect}. Found: #{found.inspect}"
         end
         
         def message
